--- a/fortran/truss/Untitled3.in
+++ b/fortran/truss/Untitled3.in
@@ -1,20 +1,20 @@
-#nnodes nelements nbeams ngeobeam(nbase) nsection
+#nnodes nelements nbeams ngeobeam(nbase) nsection + (line below) Young modulus and Poisson coeff
 4     2     1     1     1
-2.70E06 3.00E-1 
+2.20E06 3.00E-1 
 #coord nodes (nn) not formatting : X.YYEZZ or -X.YEZZ or X.YYE-Z, separated by three spaces
 0.00E00   0.00E00   0.00E00
 0.00E00   5.00E-1   0.00E00
 5.00E-1   0.00E00   0.00E00
 1.00E00   0.00E00   0.00E00
 #declaration of elmts (ne) (total num of nodes, coord nodes for elmt + section A and Iz) 1.00E03 -1.0 1.00E03 2.21E03
-1     1     2
-3     1     3
-#structure pattern of beam elmts
+1     2     4     1.00E-2  -1.00E00
+3     1     4     1.00E-2  1.00E-2
+#structure pattern of beam elmts (only for beam: up to 10 grid points)
 1
 3
 4
 # ne, types of connection for element at end1, displ. imposed/unknown end1, force  imposed/unknown end1, then then same at end2
-1     3     1     0     3     0     0 
+1     1     1     0     1     0     0 
 2     3     0     0     5     0     1
 #(n, 3+1) displacement/angles Ux,Vx,Az imposed typ: 0 = disp known (OLD)
 1     0     0     0
